FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20210730:
AUTHOR: tcberner@FreeBSD.org

  A new USES has been added to depend on the mlt multimedia framework.

  Ports that depend on mlt should now use USES=mlt:<version> to specify
  their dependency.

  At the moment the supported version is 6, but will be extended to also 
  allow for selection of mlt 7 shortly.

20210604:
AUTHOR: mat@FreeBSD.org

  The prepare-commit-msg hook was enhanced to auto-fill the first line of the
  commit with the category/port in case only one port was committed to.

20210525:
AUTHOR: amdmi3@FreeBSD.org

  PYTHON_REL has been switched from a 4 digits number to a 5 digits number to
  handle python 3.10.0.  Ports checking for python 3.7.10 should compare
  PYTHON_REL against 30710 and ports checking for python 3.10.0 should compare
  PYTHON_REL against 31000.

20210420:
AUTHOR: mat@FreeBSD.org

  A prepare-commit-msg hook was added to the repository.  This hooks prepares
  the commit message template for specific ports tree usage.

  To make use of it, the easiest way is to run:

    git config --add core.hooksPath .hooks

20201120:
AUTHOR: gnome@FreeBSD.org

  New default version for librsvg2.

  Current versions of graphics/librsvg2 are using parts written in rust.
  For architectures that do not have support for rust, and for people
  who prefer not to have, or are not able to compile rust software due
  to hardware limitations, the version can be chosen via this new flag.

  The default on almost all architectures is rust.

  If you prefer no to use rust, add the following to your make.conf:

  	DEFAULT_VERSIONS+=librsvg2=legacy

20210327:
AUTHOR: bapt@FreeBSD.org

  New @touch keyword