@@ -164,17 +164,6 @@ CMAKE_ARGS+=		-DWITH_SSL=${OPENSSLBASE}
 CXXFLAGS+=	-fpermissive
 .endif
 
-# mysql57-server fails to compile with llvm11, which was imported to current in r364284
-# without a version increase (1300109 = r364274).
-# Until a proper fix is provided, simply use llvm from ports, which probably could be
-# a backport of amongst other tings:
-# https://github.com/mysql/mysql-server/commit/08f46b3c00ee70e7ed7825daeb91df2289f80f50
-.if ${CHOSEN_COMPILER_TYPE} == clang && ${OPSYS} == FreeBSD && ${OSVERSION} >= 1300109
-BUILD_DEPENDS+=	clang${LLVM_DEFAULT}:devel/llvm${LLVM_DEFAULT}
-CC=		${LOCALBASE}/bin/clang${LLVM_DEFAULT}
-CXX=		${LOCALBASE}/bin/clang++${LLVM_DEFAULT}
-.endif
-
 .if ${ARCH} == powerpc
 LLD_UNSAFE=	yes
 .endif
