@@ -1,6 +1,6 @@
 PORTNAME=	php73
 DISTVERSION=	7.3.29
-PORTREVISION?=	0
+PORTREVISION?=	1
 CATEGORIES?=	lang devel www
 MASTER_SITES=	PHP/distributions
 DISTNAME=	php-${DISTVERSION}
