@@ -1,6 +1,6 @@
 PORTNAME=	php74
 DISTVERSION=	7.4.22
-PORTREVISION?=	0
+PORTREVISION?=	1
 CATEGORIES?=	lang devel www
 MASTER_SITES=   PHP/distributions
 DISTNAME=	php-${DISTVERSION}
