@@ -172,13 +172,9 @@ BUILD_DEPENDS=  re2c:devel/re2c
 .endif
 
 .if ${PHP_MODNAME} == "ldap"
-CONFIGURE_ARGS+=--with-ldap=${LOCALBASE}
+CONFIGURE_ARGS+=--with-ldap=${LOCALBASE} --with-ldap-sasl=${LOCALBASE}
 
 USE_OPENLDAP=	yes
-
-. ifdef(WANT_OPENLDAP_SASL)
-CONFIGURE_ARGS+=--with-ldap-sasl=${LOCALBASE}
-. endif
 .endif
 
 .if ${PHP_MODNAME} == "mbstring"
