@@ -1,6 +1,6 @@
 PORTNAME=	php80
 DISTVERSION=	8.0.9
-PORTREVISION?=	0
+PORTREVISION?=	1
 CATEGORIES?=	lang devel www
 MASTER_SITES=	PHP/distributions
 DISTNAME=	php-${DISTVERSION}
