@@ -2,7 +2,7 @@
 
 PORTNAME=	opendkim
 PORTVERSION=	2.10.3
-PORTREVISION=	11
+PORTREVISION=	12
 CATEGORIES=	mail security
 MASTER_SITES=	SF/${PORTNAME} \
 		SF/${PORTNAME}/Previous%20Releases \
@@ -105,10 +105,6 @@ MAKE_ENV=	INSTALL_STRIP_FLAG=${STRIP}
 
 .if ${PORT_OPTIONS:MDEBUG}
 WITH_DEBUG=	yes
-.endif
-
-.if ${PORT_OPTIONS:MSASL} && ${PORT_OPTIONS:MOPENLDAP}
-WANT_OPENLDAP_SASL=	yes
 .endif
 
 .if ${PORT_OPTIONS:MFILTER}
