@@ -2,7 +2,7 @@
 
 PORTNAME=	postfix
 DISTVERSION=	3.6.2
-PORTREVISION?=	0
+PORTREVISION?=	1
 PORTEPOCH=	1
 CATEGORIES=	mail
 MASTER_SITES=	http://ftp.porcupine.org/mirrors/postfix-release/ \
@@ -38,7 +38,7 @@ USE_SUBMAKE=	yes
 SCRIPTS_ENV+=	POSTFIX_DEFAULT_MTA="${POSTFIX_DEFAULT_MTA}"
 
 OPTIONS_SUB=	yes
-OPTIONS_DEFINE=	BDB BLACKLISTD CDB DOCS EAI INST_BASE LDAP LDAP_SASL \
+OPTIONS_DEFINE=	BDB BLACKLISTD CDB DOCS EAI INST_BASE LDAP \
 		LMDB MYSQL NIS PCRE PGSQL SASL SQLITE TEST TLS
 
 OPTIONS_RADIO=		RG1
@@ -63,7 +63,6 @@ CDB_DESC=	CDB maps lookups
 EAI_DESC=	Email Address Internationalization (SMTPUTF8) support
 INST_BASE_DESC=	Install into /usr and /etc/postfix
 LDAP_DESC=	LDAP maps (uses WITH_OPENLDAP_VER)
-LDAP_SASL_DESC=	LDAP client-to-server SASL auth
 LMDB_DESC=	LMDB maps
 TEST_DESC=	SMTP/LMTP test server and generator
 
@@ -234,15 +233,9 @@ DYN_EXT+=		ldap
 WANT_OPENLDAP_VER=	${WITH_OPENLDAP_VER}
 . endif
 POSTFIX_CCARGS+=	-DHAS_LDAP -I${LOCALBASE}/include
+POSTFIX_CCARGS+=	-I${LOCALBASE}/include/sasl -DUSE_LDAP_SASL
 POSTFIX_DYN_AUXLIBS+=	"AUXLIBS_LDAP=-L${LOCALBASE}/lib -lldap -L${LOCALBASE}/lib -llber"
 _REQUIRE+=		slapd
-. if ${PORT_OPTIONS:MLDAP_SASL}
-.  if ! ${PORT_OPTIONS:MSASL}
-LIB_DEPENDS+=		libsasl2.so:security/cyrus-sasl2
-.  endif
-WANT_OPENLDAP_SASL=	yes
-POSTFIX_CCARGS+=	-I${LOCALBASE}/include/sasl -DUSE_LDAP_SASL
-. endif
 .endif
 
 .if ${PORT_OPTIONS:MCDB}
