@@ -544,7 +544,6 @@
     SUBDIR += openbgpd
     SUBDIR += openbgpd6
     SUBDIR += openldap24-client
-    SUBDIR += openldap24-sasl-client
     SUBDIR += openldap24-server
     SUBDIR += openmdns
     SUBDIR += openmpi
