@@ -2,6 +2,7 @@
 
 PORTNAME=		nss-pam-ldapd
 PORTVERSION=		0.9.11
+PORTREVISION=		1
 CATEGORIES=		net
 MASTER_SITES=		http://arthurdejong.org/nss-pam-ldapd/ \
 			ZI
@@ -74,7 +75,6 @@ CONFIGURE_ARGS+=	--disable-kerberos
 .endif
 
 .if ${PORT_OPTIONS:MSASL}
-WANT_OPENLDAP_SASL=	yes
 CONFIGURE_ARGS+=	--enable-sasl
 .else
 CONFIGURE_ARGS+=	--disable-sasl
