@@ -1,7 +1,0 @@
-# Created by: Xin LI <delphij@FreeBSD.org>
-
-CLIENT_ONLY=		sasl
-
-MASTERDIR=		${.CURDIR}/../openldap24-server
-
-.include "${MASTERDIR}/Makefile"
