@@ -1,5 +1,6 @@
 PORTNAME=	ldap
 DISTVERSION=	3.3.1
+PORTREVISION=	1
 CATEGORIES=	net python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -19,17 +20,8 @@ USE_PYTHON=	autoplist distutils
 USE_OPENLDAP=	yes
 WANT_OPENLDAP_VER=	24
 
-OPTIONS_DEFINE=	SASL
-
-SASL_VARS=	WANT_OPENLDAP_SASL=yes
-SASL_CONFLICTS=	openldap24-client-2.*
-
 post-patch:
 	@${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' ${WRKSRC}/setup.py
-
-do-configure-SASL-off:
-	@cd ${WRKSRC} && ${PYTHON_CMD} setup.py -q setopt -c _ldap -s HAVE_TLS -o defines
-	@cd ${WRKSRC} && ${PYTHON_CMD} setup.py -q saveopts
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}/_ldap*.so
