@@ -1,5 +1,5 @@
 PKGNAMESUFFIX=	-saslauthd
-PORTREVISION=	1
+PORTREVISION=	2
 
 COMMENT=	SASL authentication server for cyrus-sasl2
 
@@ -12,7 +12,7 @@ USE_RC_SUBR=	saslauthd
 CYRUS_CONFIGURE_ARGS=	--with-saslauthd=${SASLAUTHD_RUNPATH}
 CONFIGURE_ENV+=		andrew_cv_runpath_switch=none
 
-OPTIONS_DEFINE=		DOCS HTTPFORM OPENLDAP OPENLDAP_SASL
+OPTIONS_DEFINE=		DOCS HTTPFORM OPENLDAP
 OPTIONS_RADIO=		GSSAPI SASLDB
 OPTIONS_RADIO_SASLDB=	BDB1 BDB GDBM LMDB
 OPTIONS_DEFAULT=	BDB1
@@ -22,8 +22,6 @@ HTTPFORM_CONFIGURE_ENABLE=httpform
 OPENLDAP_DESC=		Use OpenLDAP
 OPENLDAP_USE=		OPENLDAP=yes
 OPENLDAP_CONFIGURE_ON=	--with-ldap=${LOCALBASE}
-OPENLDAP_SASL_DESC=	OpenLDAP client with SASL2 support
-OPENLDAP_SASL_VARS=	WANT_OPENLDAP_SASL=yes
 
 SASLDB_DESC=		Experimental SASLdb authentication module
 BDB_USES=		bdb
