@@ -2,7 +2,7 @@
 
 PORTNAME=	ldapvi
 PORTVERSION=	1.7
-PORTREVISION=	5
+PORTREVISION=	6
 CATEGORIES=	sysutils net
 MASTER_SITES=	http://www.lichteblau.com/download/ \
 		LOCAL/sbz
@@ -28,11 +28,6 @@ LIBS+=		-L${LOCALBASE}/lib
 PLIST_FILES=	bin/${PORTNAME} man/man1/${PORTNAME}.1.gz \
 		${DOCSDIR_REL}/manual.css ${DOCSDIR_REL}/manual.xml \
 		${DOCSDIR_REL}/bg.png ${DOCSDIR_REL}/html.xsl
-
-# XXX should probably be converted to OptionsNG
-.if !defined(WANT_OPENLDAP_SASL) || defined(WITHOUT_SASL)
-CONFIGURE_ARGS=	--without-sasl
-.endif
 
 post-patch:
 	@${REINPLACE_CMD} -e 's/-lssl/-lcrypto/' ${WRKSRC}/configure
