@@ -10,6 +10,11 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20210801:
+AUTHOR: delphij@FreeBSD.org
+  WANT_OPENLDAP_SASL is removed now that OpenLDAP is always built with
+  SASL support.
+
 20210730:
 AUTHOR: tcberner@FreeBSD.org
 
